Bug #134238 --> Changing the port for POP with SSL server to 110 has no effect

Contributed patch.

r=ch.ey
sr=mscott